--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -34,9 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CsvHelper, Version=27.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
-      <HintPath>..\HRTools_v2\packages\CsvHelper.27.2.1\lib\net47\CsvHelper.dll</HintPath>
-    </Reference>
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\HRTools_v2\packages\Dapper.2.0.123\lib\net461\Dapper.dll</HintPath>
     </Reference>
@@ -90,7 +87,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\DateConverter.cs" />
+    <Compile Include="DataManager\LoggerManager.cs" />
     <Compile Include="DataManager\SanctionManager.cs" />
     <Compile Include="Data\RosterDataManager.cs" />
     <Compile Include="Data\SearchProvider.cs" />
@@ -99,40 +96,50 @@
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Interfaces\IDataStream.cs" />
+    <Compile Include="Interfaces\ILogger.cs" />
     <Compile Include="Interfaces\ISearchable.cs" />
     <Compile Include="Interfaces\IWebStream.cs" />
     <Compile Include="Interfaces\IWritable.cs" />
     <Compile Include="IO\CacheManager.cs" />
     <Compile Include="IO\CSVStream.cs" />
     <Compile Include="IO\FileHelper.cs" />
+    <Compile Include="Logs\ConsoleLogger.cs" />
+    <Compile Include="Logs\MessageBoxLogger.cs" />
+    <Compile Include="Logs\ToastLogger.cs" />
     <Compile Include="Models\AWAL\AwalEntity.cs" />
     <Compile Include="Models\AWAL\AwalEntry.cs" />
     <Compile Include="Models\DataSnips\DataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeDataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeStatusSnip.cs" />
-    <Compile Include="Models\DataSnips\EmployeeSummary.cs" />
+    <Compile Include="Models\Resignations\ResignationEntity.cs" />
+    <Compile Include="Models\Resignations\ResignationEntry.cs" />
     <Compile Include="Models\Roster.cs" />
     <Compile Include="Models\Sanctions\SanctionEntity.cs" />
     <Compile Include="Models\Sanctions\SanctionPreview.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Models\Suspension.cs" />
+    <Compile Include="Models\Timeline.cs" />
     <Compile Include="Networking\WebStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AWALRepository.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\PreviewRepository.cs" />
     <Compile Include="Repository\RepositoryHelper.cs" />
+    <Compile Include="Repository\ResignationsRepository.cs" />
     <Compile Include="Repository\SanctionsRepository.cs" />
+    <Compile Include="States\ResignationWidgetState.cs" />
     <Compile Include="Storage\DataStorage.cs" />
     <Compile Include="Types\AwalStatus.cs" />
-    <Compile Include="Types\CacheState.cs" />
+    <Compile Include="States\CacheState.cs" />
     <Compile Include="Types\CaseStatus.cs" />
     <Compile Include="Types\EmploymentStatus.cs" />
-    <Compile Include="Types\HomePageWidgetState.cs" />
-    <Compile Include="Types\LoadingPageState.cs" />
+    <Compile Include="States\HomePageWidgetState.cs" />
+    <Compile Include="States\LoadingPageState.cs" />
     <Compile Include="Types\MeetingType.cs" />
+    <Compile Include="Types\NotificationType.cs" />
     <Compile Include="Types\Response.cs" />
-    <Compile Include="Types\UIComponentState.cs" />
+    <Compile Include="States\SanctionWidgetState.cs" />
+    <Compile Include="States\UIComponentState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
