--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -89,6 +89,8 @@
   <ItemGroup>
     <Compile Include="DataManager\LoggerManager.cs" />
     <Compile Include="DataManager\SanctionManager.cs" />
+    <Compile Include="DataValidation\DataValidator.cs" />
+    <Compile Include="DataValidation\ResignationValidator.cs" />
     <Compile Include="Data\RosterDataManager.cs" />
     <Compile Include="Data\SearchProvider.cs" />
     <Compile Include="Data\SettingsManager.cs" />
@@ -119,6 +121,7 @@
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Models\Suspension.cs" />
     <Compile Include="Models\Timeline.cs" />
+    <Compile Include="Networking\WebHelper.cs" />
     <Compile Include="Networking\WebStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AWALRepository.cs" />
