--- a/HRTools_v2/HRTools_v2.csproj
+++ b/HRTools_v2/HRTools_v2.csproj
@@ -128,6 +128,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\AppSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EmployeeData.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -182,10 +186,14 @@
     <Compile Include="Helpers\DialogHelper.cs" />
     <Compile Include="Helpers\FolderPicker.cs" />
     <Compile Include="Helpers\WindowSizeHelper.cs" />
+    <Compile Include="ViewModels\AppSettingsViewModel.cs" />
     <Compile Include="ViewModels\EmployeeDataViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
     <Compile Include="ViewModels\LoaderPageViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\AppSettings.xaml.cs">
+      <DependentUpon>AppSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EmployeeData.xaml.cs">
       <DependentUpon>EmployeeData.xaml</DependentUpon>
     </Compile>
