--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -89,8 +89,15 @@
   <ItemGroup>
     <Compile Include="DataManager\LoggerManager.cs" />
     <Compile Include="DataManager\SanctionManager.cs" />
-    <Compile Include="DataValidation\DataValidator.cs" />
-    <Compile Include="DataValidation\ResignationValidator.cs" />
+    <Compile Include="DataValidation\AwalValidation.cs" />
+    <Compile Include="DataValidation\AWAL\AwalDateValidation.cs" />
+    <Compile Include="DataValidation\AWAL\AwalValidation.cs" />
+    <Compile Include="DataValidation\BaseValidationHandler.cs" />
+    <Compile Include="DataValidation\IDataValidation.cs" />
+    <Compile Include="DataValidation\IValidationHandler.cs" />
+    <Compile Include="DataValidation\Resignation\ResignationValidation.cs" />
+    <Compile Include="DataValidation\Resignation\ResignationTextValidation.cs" />
+    <Compile Include="DataValidation\ValidationRequest.cs" />
     <Compile Include="Data\RosterDataManager.cs" />
     <Compile Include="Data\SearchProvider.cs" />
     <Compile Include="Data\SettingsManager.cs" />
