--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -131,6 +131,8 @@
     <Compile Include="Models\DataSnips\EmployeeDataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeStatusSnip.cs" />
     <Compile Include="Models\EmplComment.cs" />
+    <Compile Include="Models\Meetings\MeetingsEntity.cs" />
+    <Compile Include="Models\Meetings\MeetingsImportMap.cs" />
     <Compile Include="Models\Resignations\ResignationEntity.cs" />
     <Compile Include="Models\Resignations\ResignationEntry.cs" />
     <Compile Include="Models\Roster.cs" />
@@ -146,6 +148,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AWALRepository.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\MeetingsRepository.cs" />
     <Compile Include="Repository\PreviewRepository.cs" />
     <Compile Include="Repository\RepositoryHelper.cs" />
     <Compile Include="Repository\ResignationsRepository.cs" />
