--- a/HRTools_v2/HRTools_v2.csproj
+++ b/HRTools_v2/HRTools_v2.csproj
@@ -132,6 +132,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Awal\AwalPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EmployeeData.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -196,12 +200,16 @@
     <Compile Include="Helpers\FolderPicker.cs" />
     <Compile Include="Helpers\WindowSizeHelper.cs" />
     <Compile Include="ViewModels\AppSettingsViewModel.cs" />
+    <Compile Include="ViewModels\Awal\AwalPageViewModel.cs" />
     <Compile Include="ViewModels\EmployeeDataViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
     <Compile Include="ViewModels\LoaderPageViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AppSettings.xaml.cs">
       <DependentUpon>AppSettings.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Awal\AwalPage.xaml.cs">
+      <DependentUpon>AwalPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EmployeeData.xaml.cs">
       <DependentUpon>EmployeeData.xaml</DependentUpon>
