import custom meetings

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -130,6 +130,8 @@
     <Compile Include="Models\AWAL\AwalEntity.cs" />
     <Compile Include="Models\AWAL\AwalEntry.cs" />
     <Compile Include="Models\AWAL\AwalImportMap.cs" />
+    <Compile Include="Models\CustomMeetings\CustomMeetingEntity.cs" />
+    <Compile Include="Models\CustomMeetings\CustomMeetingImportMap.cs" />
     <Compile Include="Models\DataSnips\DataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeDataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeStatusSnip.cs" />
