--- a/HRTools_v2/HRTools_v2.csproj
+++ b/HRTools_v2/HRTools_v2.csproj
@@ -119,8 +119,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\Resignations\ResignationsPageViewModel.cs" />
+    <Compile Include="ViewModels\Sanctions\SanctionsPageViewModel.cs" />
     <Compile Include="Views\Resignations\ResignationsPage.xaml.cs">
       <DependentUpon>ResignationsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Sanctions\SanctionsPage.xaml.cs">
+      <DependentUpon>SanctionsPage.xaml</DependentUpon>
     </Compile>
     <Page Include="Resources\Animations\Anim.xaml">
       <SubType>Designer</SubType>
@@ -171,7 +175,7 @@
     <Compile Include="Args\NavigationArgs.cs" />
     <Compile Include="Args\ShowToastArgs.cs" />
     <Compile Include="Converters\AwalConverter\AwalStatusToColorConverter.cs" />
-    <Compile Include="Converters\AwalConverter\AwalStatusToggleToTextConverter.cs" />
+    <Compile Include="Converters\SanctionsConverter\SanctionToggleToTextConverter.cs" />
     <Compile Include="Converters\AwalConverter\AwalTextDecorationConverter.cs" />
     <Compile Include="Converters\AwalConverter\AwalTextForegroundConverter.cs" />
     <Compile Include="Converters\AwalConverter\AwalTextSizeConverter.cs" />
@@ -252,6 +256,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Sanctions\SanctionsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -308,6 +316,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.4.4.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.4.4.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
