--- a/HRTools_v2/HRTools_v2.csproj
+++ b/HRTools_v2/HRTools_v2.csproj
@@ -118,8 +118,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\Meetings\MeetingsPageViewModel.cs" />
     <Compile Include="ViewModels\Resignations\ResignationsPageViewModel.cs" />
     <Compile Include="ViewModels\Sanctions\SanctionsPageViewModel.cs" />
+    <Compile Include="Views\Meetings\MeetingsPage.xaml.cs">
+      <DependentUpon>MeetingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Resignations\ResignationsPage.xaml.cs">
       <DependentUpon>ResignationsPage.xaml</DependentUpon>
     </Compile>
@@ -249,6 +253,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Values\Dim.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Meetings\MeetingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
