--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Factory\DataMap.cs" />
     <Compile Include="Factory\IDataImportObject.cs" />
     <Compile Include="Factory\IDataMap.cs" />
+    <Compile Include="Helpers\DateHelper.cs" />
     <Compile Include="Interfaces\IDataStream.cs" />
     <Compile Include="Interfaces\IEmployee.cs" />
     <Compile Include="Interfaces\ILogger.cs" />
@@ -137,9 +138,12 @@
     <Compile Include="Models\CaseFile.cs" />
     <Compile Include="Models\CustomMeetings\CustomMeetingEntity.cs" />
     <Compile Include="Models\CustomMeetings\CustomMeetingImportMap.cs" />
+    <Compile Include="Models\DataSnips\AwalMetrics.cs" />
+    <Compile Include="Models\DataSnips\CustomMeetingMetrics.cs" />
     <Compile Include="Models\DataSnips\DataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeDataPreview.cs" />
     <Compile Include="Models\DataSnips\EmployeeStatusSnip.cs" />
+    <Compile Include="Models\DataSnips\MeetingMetrics.cs" />
     <Compile Include="Models\EmplComment.cs" />
     <Compile Include="Models\EmplTask.cs" />
     <Compile Include="Models\Meetings\ERMeetingImportMap.cs" />
@@ -163,6 +167,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AWALRepository.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\DashboardRepository.cs" />
     <Compile Include="Repository\MeetingsRepository.cs" />
     <Compile Include="Repository\PreviewRepository.cs" />
     <Compile Include="Repository\RepositoryHelper.cs" />
